CHANGES

Trunk
	Copy non-standard attributes on nested unit in srcml2src.

	Add preliminary option "--info" to srcml2src.


Jan-30-2006-Beta

	Better error detection for unit numbers greater than the number of units.

	Remove special handling for ANTLR bug in 2.7.5.

	Fix bug with else bound to wrong if.

	Fix bug with misidentification of no parameter macro as call when followed by end of file.

	Fix bug with misidentification of macro as call when followed by end of file.

	Fix bug with processing #if 0 block correctly in guessing mode.

	Fix bug with processing include directive correctly in guessing mode.

	Return status codes for src2srcml and srcml2src.

	More intelligent handling of unit attributes for units inside of compound nested documents.

	Output error when translating entire compound document (without extracting or specifying nested unit).

	Fix misidentification of call as macro with starting '&' operator.

	Put in full handling of Java interfaces.

	Fix regression error for Java packages.

	Output source encoding in src2srcml when in verbose mode.

	Write verbose output to standard error.

	Make sure that C++ is specified as the language for C++ (instead of CPP).

	Document hidden srcml2src option for nested unit count in help.

	Fix function pointer declarations with no '*'.

	Allow for comment character of '#' in file list.

	Allow for blank lines in file list.

	Input file option is made a default nested output.

	Added whether libxml2 enabled to version.

	Form feeds are now stored using a new empty XML element.

	Default xml encoding for srcml2src unit extraction is that of the root unit.

	Allow for libxml and non-libxml builds of src2srcml.  Currently, srcml2src is only available with a
	libxml build.

	Get default text encoding from locale.

	Handle non-existing input files correctly.

	Allow for combined short options in src2srcml.

	Fixed then after condition problem with while nested in if.

	Add option to srcml2src to get encoding.
